# errgen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.deps/openai-2.26.0.dist-info/: RECORD
.deps/python_dotenv-1.2.1.dist-info/: RECORD
errgen/: __init__.py  config.py  graph.py  llm.py  models.py  pipeline.py  prompt_aliases.py  report.py  run_record.py  state.py
errgen/analysis/: __init__.py  base.py  business.py  financial.py  news.py  risk.py
errgen/calculator/: __init__.py  finance_calc.py
errgen/data/: __init__.py  base.py  finnhub.py  fmp.py  newsapi.py  sec.py  yahoo.py
errgen/extraction/: __init__.py  financial.py  news.py
errgen/nodes/: __init__.py  analysis_agent.py  baseline_prediction_agent.py  extract_evidence.py  parse_query.py  prediction_agent.py  report_writer.py  retrieve_data.py  verification_agent.py
errgen/tools/: __init__.py  calculator_tools.py
errgen/verification/: __init__.py  checker.py  reviser.py
evaluation/: __init__.py  aggregate_scores.py  io.py  judges.py  metrics.py  schemas.py  scoring.py
report/: main.tex  references.bib
scripts/: build_errgen_queries.py  build_eval_queries.py  evaluate_full_vs_ground_truth.py  evaluate_prediction_reruns.py  evaluate_reports.py  export_report_pdf.py  extract_report_text.py  rerun_prediction_from_run.py  rerun_prediction_vs_gt_batch.py  run_eval_batch.py  run_report.py
tests/: test_calculator.py  test_data_clients.py  test_evaluation_judges.py  test_evaluation_scoring.py  test_models.py  test_prompt_aliases.py  test_revision_scope.py  test_verification.py
(+1667 files in other folders)
